2003-06-07  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/name_storage.h:
	* libpp/name_storage.cpp:
	* libpp/profile_container.cpp:
	* libpp/profile_container.h:
	* libpp/sample_container.h:
	* libpp/sample_container.cpp:
	* libpp/symbol_container.h:
	* libpp/symbol_container.cpp:
	* pp/opannotate.cpp: replace some use of string filename by
	  debug_name_id

2003-06-05  John Levon  <levon@movementarian.org>

	* daemon/Makefile.am:
	* daemon/opd_kernel.c:
	* daemon/p_module.h: remove p_module.h, unused

	* daemon/opd_cookie.h: use __NR_lookup_dcookie and
	use our definitions only if it's not defined

	* daemon/opd_image.c:
	* daemon/opd_kernel.c:
	* daemon/opd_sample_files.c:
	* daemon/oprofiled.c: pedantry

	* libabi/op_import.cpp:
	* libabi/abi_test.cpp: fix build from odb change

	* libop/op_config.h: move NR_CPUS to ...

	* libop/op_config_24.h: ... here

	* libop/op_hw_config.h: remove unused OP_COUNT_MAX
2003-06-03  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/op_header.cpp:
	* libpp/profile.cpp:
	* dae/opd_proc.c:
	* dae/opd_sample_files.c:
	* daemon/opd_image.c:
	* daemon/opd_sample_files.c:
	* libdb/odb_hash.h:
	* libdb/db_insert.c:
	* libdb/db_manage.c:
	* libdb/db_test.c: error message is now a field of a samples_odb_t

2003-06-03  John Levon  <levon@movementarian.org>

	* libutil++/child_reader.cpp:
	* libabi/abi.cpp:
	* libabi/abi.h:
	* libabi/abi_test.cpp:
	* libabi/op_api.h:
	* libabi/op_abi.cpp:
	* libabi/op_import.cpp: pedantry, remove unused code

2003-06-01  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/oprofiled.c:
	* libop/oprofiled.c:
	* libop/op_cpu_type.c:
	* module/oprofile.c:
	* module/oprofile.h:
	* pp/opdiff.cpp: more static data and function

2003-05-31  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start_util.h:
	* libdb/db_stat.c:
	* libdb/odb_hash.h:
	* libpp/format_output.h:
	* libpp/locate_image.h:
	* libpp/name_storage.h:
	* libpp/partition_files.h:
	* libpp/profile.h:
	* libutil++/op_bfd.h: