@@ -17,6 +17,8 @@ Before 1.0 big stuff
 Before 1.0 little stuff
 -----------------------
 
+ o try  $ opannotate --assembly --include-symbols=memcpy | less
+   all the redudant haeder info seems wrong
  o thread profiling - kernel change in 2.5 to export task->tgid
  o per-cpu profiling
  o test opannotate -s -a on an application containing relative path debug
